# solana-cli-sniper

./: .gitignore  Cargo.toml  Dockerfile  UmiURNu1uxenKbjRPUrQstSkpgJAs75zzGxurxDXSSp.json  auth-keypair.json  bundler_settings.json  config.toml  mempool_tx.json  metadata.json  mintor_settings.json  readme.md  settings.json  test.json
src/: lib.rs  main.rs  readme.md
src/app/: config_init.rs  embeds.rs  mod.rs  utils.rs  wallets.rs
src/auth/: mod.rs
src/copytrade/: copytrading_decoder.rs  mod.rs  subscription.rs
src/daos_fun/: daos.json  daos_create_fund.rs  daos_transaction.rs  daosfun_snipe.rs  inx_builder.rs  menu.rs  mod.rs
src/daos_fun/dao_burned_interface/: accounts.rs  errors.rs  instructions.rs  typedefs.rs
src/daos_fun/fee_share_interface/: accounts.rs  errors.rs  instructions.rs  mod.rs
src/daos_fun/fundraise_interface/: Cargo.toml
src/daos_fun/fundraise_interface/src/: accounts.rs  errors.rs  instructions.rs  typedefs.rs
src/daos_fun/virtual_xyk_interface/: accounts.rs  errors.rs  instructions.rs  mod.rs
src/env/: env_loader.rs  input.rs  minter.rs  mod.rs  utils.rs  vanity.rs
src/input/: mod.rs
src/instruction/: error.rs  instruction.rs
src/jito/: mod.rs
src/jito_plugin/: lib.rs  mod.rs
src/jupiter/: mod.rs  quotes.rs  route_map.rs  swap.rs  swap_instructions.rs
src/jupiter/interface/: accounts.rs  errors.rs  events.rs  instructions.rs  mod.rs  typedefs.rs
src/jupiter/jup_utils/: field_instruction.rs  field_prioritization_fee.rs
src/liquidity/: minter_main.rs  mod.rs  pool_1.rs  pool_27.rs  pool_ixs.rs  swap_ixs.rs  utils.rs
src/liquidity/freeze_authority/: mod.rs
src/liquidity/lut/: create_lut.rs  extend_lut.rs
src/liquidity/option/: mod.rs  sol_distribution.rs  wallet_gen.rs  withdraw_sol.rs  withdraw_wrapped.rs  wrap_sol.rs
src/liquidity/remove_liq/: remover.rs
src/liquidity/sell_mode/: mod.rs  sell_percentage.rs
src/moonshot/: menu.rs  mod.rs  sniper.rs  swap.rs
src/moonshot/instructions/: accounts.rs  errors.rs  instructions.rs  mod.rs  typedefs.rs
src/plugins/: mod.rs
src/plugins/jito_plugin/: event_loop.rs  lib.rs
src/plugins/yellowstone_plugin/: client.rs  lib.rs  mod.rs  subscribe_ping.rs
src/pumpfun/: executor.rs  migration_sniper.rs  mod.rs  pump.rs  pump_swap_in.rs  sniper.rs  sub_menu.rs  swap.rs  token_data.rs
src/pumpfun/bundler/: create_metadata.rs  ix_accounts.rs  menu.rs  mod.rs  multi_deployer.rs  pump_lut.rs  pumpfun_deploy.rs
src/pumpfun/bundler/sell_mode/: mod.rs  pump_seller.rs
src/pumpfun/instructions/: instructions.rs  mod.rs
src/pumpfun/instructions/pumpfun_program/: accounts.rs  instructions.rs  mod.rs
src/pumpfun/pump_interface/: accounts.rs  builder.rs  errors.rs  instructions.rs  mod.rs
src/raydium/: manual_sniper.rs  mod.rs  subscribe.rs
src/raydium/bundles/: mev_trades.rs  mod.rs  raydiumupdate.rs  swap_direction.rs  swap_instructions.rs
src/raydium/pool_searcher/: amm_keys.rs  mod.rs  program.rs
src/raydium/sniper/: mod.rs  subscribe.rs  utils.rs
src/raydium/swap/: grpc_new_pairs.rs  instructions.rs  metadata.rs  mod.rs  raydium_swap_in.rs  raydium_swap_out.rs  swap_in.rs  swapper.rs  trades.rs
src/raydium/utils/: parser.rs  utils.rs
src/raydium/volume_pinger/: volume.rs
src/raydium_amm/: copytrade_amm_builder.rs  manual_sniper.rs  mod.rs  subscribe.rs
src/raydium_amm/bundles/: mev_trades.rs  raydiumupdate.rs  swap_direction.rs  swap_instructions.rs
src/raydium_amm/pool_searcher/: amm_keys.rs
src/raydium_amm/sniper/: utils.rs
src/raydium_amm/swap/: instructions.rs  metadata.rs  raydium_amm_sniper.rs  raydium_swap_in.rs  raydium_swap_out.rs  swap_in.rs  swapper.rs  trades.rs
src/raydium_amm/utils/: mod.rs  utils.rs
src/raydium_amm/volume_pinger/: volume.rs
src/raydium_cpmm/: cpmm_builder.rs  menu.rs  mod.rs
src/raydium_cpmm/cpmm_instructions/: accounts.rs  errors.rs  events.rs  instructions.rs  mod.rs
src/raydium_cpmm/instructions/: amm_instructions.rs  cpmm_inxs.rs  events_instructions_parse.rs  mod.rs  rpc.rs  token_instructions.rs  utils.rs
src/raydium_cpmm/programs/cp-swap/: Cargo.toml
src/router/: mod.rs
src/rpc/: mod.rs
src/screen/: canvas.rs  dimensions.rs  mod.rs  unused_menus.rs
src/user_inputs/: amounts.rs  mod.rs  mode.rs  tokens.rs
src/utils/: mod.rs  rand.rs  terminal.rs  transaction.rs  transaction_history.rs
src/volume_bot/: mod.rs  volume_buyer.rs
src/yellowstoneplugin/: client.rs  mod.rs  subscribe_ping.rs  tx_blocktime.rs
tasks/: task_1.csv  task_2.csv
wallets/: wallet.json
