[package]
name = "firstx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#solana
solana-client = "1.17.20"
solana-sdk = "1.17.20"
solana-transaction-status = "1.17.20"
solana-program = "1.17.20"
solana-account-decoder = "1.17.20"
solana-metrics = "1.17.20"

#spl
spl-associated-token-account = "2.2.0"
spl-token = "4.0.0"
spl-token-client = "0.8.0"

#tokio
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }
hex = "0.4.3"

#serde
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"

#base64
base64 = "0.21.5"
bincode = "1.3.3"
futures = "0.3.15"

maplit = "1.0.2"
lazy_static = "1.4.0"


#reqwest
reqwest = { version = "0.11.23", features = ["json"] }

regex = "1.10.3"
log = "0.4.20"

futures-util = "0.3"

pretty_env_logger = "0.5.0"
demand = "1.0.1"

colorize = "0.1.0"
